correct path for images

--- a/robot.html
+++ b/robot.html
@@ -5,18 +5,18 @@
   </head>
   
   <body>
-    <img id="face" src="face.png">
-    <img id="eyes1" src="eyes.png">
-    <img id="eyes2" src="eyes2.png">
-    <img id="mouth1" src="mouth.png">
-    <img id="mouth2" src="mouth2.png">
-    <img id="nose1" src="nose.png">
-    <img id="nose2" src="nose2.png">
-    <img id="ears1" src="ears.png">
-    <img id="ears2" src="ears2.png">
-    <img id="hair1" src="hair1.png">
-    <img id="hair2" src="hair2.png">
-    <img id="hat" src="hat.png">
+    <img id="face" src="/img/face.png">
+    <img id="eyes1" src="/img/eyes.png">
+    <img id="eyes2" src="/img/eyes2.png">
+    <img id="mouth1" src="/img/mouth.png">
+    <img id="mouth2" src="/img/mouth2.png">
+    <img id="nose1" src="/img/nose.png">
+    <img id="nose2" src="/img/nose2.png">
+    <img id="ears1" src="/img/ears.png">
+    <img id="ears2" src="/img/ears2.png">
+    <img id="hair1" src="/img/hair1.png">
+    <img id="hair2" src="/img/hair2.png">
+    <img id="hat" src="/img/hat.png">
     
   </body>
   
